objects/SDO_Communication__c.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Created_Date__c</fullName>
        <label>Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From__c</fullName>
        <label>From</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>New_Solution_Design__c</fullName>
        <label>New Solution Design</label>
        <referenceTo>New_Solution_Design__c</referenceTo>
        <relationshipLabel>SDO Communications</relationshipLabel>
        <relationshipName>SDO_Communications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To__c</fullName>
        <label>To</label>
        <type>Email</type>
    </fields>
    <label>SDO Communication</label>
    <nameField>
        <displayFormat>SDOC-{000000}</displayFormat>
        <label>SDO Communication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Communications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>